--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <html lang="en">
+<head>
+  <meta charset="utf-8"/>
+ 
+  <!-- Google Tag Manager -->
+  <!-- 
+  <script>
+  (function(w,d,s,l,i){
+    w[l]=w[l]||[];
+    w[l].push({'gtm.start': new Date().getTime(), event:'gtm.js'});
+    var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';
+    j.async=true;
+    j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
+    f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-P8Z5BNZL');
+  </script>
+ End Google Tag Manager -->
+
+  <!-- Bing UET Tag -->
+  <script>
+  (function(w,d,t,o){
+    var r=d.createElement(t);
+    r.src="https://bat.bing.com/bat.js";
+    r.async=true;
+    r.onload=r.onreadystatechange=function(){
+      var e=this.readyState;
+      if(!e || e==="loaded" || e==="complete"){
+        var a={ti:"343035776",enableAutoSpaTracking:true};
+        a.q=w[o];
+        w[o]=new UET(a);
+        w[o].push("pageLoad");
+        r.onload=r.onreadystatechange=null;
+      }
+    };
+    var s=d.getElementsByTagName(t)[0];
+    s.parentNode.insertBefore(r,s);
+  })(window,document,"script","uetq");
+  </script>
+ 
+
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
